Added option to make an index unique via @Indexed annotation